# lmake_version_from_date

./: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/lmake_version_from_date/: all.html  fn.find_from.html  fn.main.html  fn.traverse_dir_with_exclude_dir.html  fn.version_from_date.html  index.html  sidebar-items.js  struct.FileMetaData.html  struct.LmakeVersionFromDate.html
docs/src/lmake_version_from_date/: main.rs.html
src/: main.rs
