[package]
name = "lmake_version_from_date"
version = "1.0.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="In cargo.toml writes the version as the date."
repository = "https://github.com/LucianoBestia/lmake"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["compiling"]


[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.0"
glob = "0.3.0"
chrono="0.4.9"
