[package]
name = "lmake_version_from_date"
version = "0.3.32"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "In cargo.toml and service_worker.js writes the version as the date."
repository = "https://github.com/LucianoBestia/lmake"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
glob = "0.3.0"
chrono="0.4.11"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"
filetime = "0.2.9"