[package]
name = "lmake_version_from_date"
version = "0.3.40"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "In Cargo.toml and service_worker.js writes the version as the date."
repository = "https://github.com/LucianoBestia/lmake"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.3"
ansi_term = "0.12.1"
glob = "0.3.0"
chrono="0.4.15"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
filetime = "0.2.12"
